# diesel_async_demo

./: Cargo.toml  README.md
migrations/2024-01-23-095404_create_posts/: up.sql
src/: lib.rs  models.rs
