[package]
name = "diesel_async_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0" }
diesel-async = { version = "0.4.1", features = ["deadpool", "postgres"] }
tokio = { version = "1", features = ["full"] }

futures-util = "0.3.21"
